# ursula-cli

./: README.md  setup.cfg  setup.py
ursula_cli/: shell.py
