[metadata]
name = ursula-cli
version = 0.0.1
summary = ursula-cli: a CLI wrapper for ansible
description-file =
    README.md
author = Craig Tracey
author-email = craigtracey@gmail.com
home-page = https://github.com/blueboxroup/ursula-cli
classifier =
    Intended Audience :: Information Technology
    Intended Audience :: Developers
    License :: OSI Approved :: Apache Software License
    Operating System :: POSIX :: Linux
    Programming Language :: Python

[global]
setup-hooks =
    pbr.hooks.setup_hook

[entry_points]
console_scripts =
    ursula = ursula_cli.shell:main

[files]
packages =
    ursula_cli

[build_sphinx]
all_files = 1
build-dir = doc/build
source-dir = doc/source
